--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ target_link_libraries(soundsbalance
     Qt${QT_MAJOR_VERSION}::Gui
     Qt${QT_MAJOR_VERSION}::QuickControls2
     Qt${QT_MAJOR_VERSION}::Widgets
-    KF$${QT_MAJOR_VERSION}::I18n
+    KF${QT_MAJOR_VERSION}::I18n
 )
 
 install(TARGETS soundsbalance ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
